Changelog Notes:
Fix trait description "Super Immune"
Make Quick and Slow worker mutually exclusive.
Remove Exclusivity from Prone To Illness and Immunocompromised.
Increase range for Ingenuitive percentile recipes.
Make Injured and Broke Leg traits mutually exclusive to Indefatigable to prevent abuse.
Prepared: Camping now gives a Small Hiking Bag instead of a Regular Hiking Bag.
Prepared: Bag now gives a Regular Hiking Bag instead of a Big Hiking Bag.
Prepared: Carpentry no longer gives a Crowbar.
Refactor Prowess traits to properly increase durability of respective weapons.
Redo math calculations for Martial Artist to prevent scaling from being exponential instead of linear.
reduce Max damage scaling for Martial Artist.
Try to prevent Specialization from robbing all xp.
Fix BatteringRam allowing players to stay invisible to Zombies.
Reduce base chance for Depressive to trigger so it's less annoying.
Gourmand's Fresh Food Find effect now properly works in Multiplayer.
Reduce severity of Slow Worker.
Reduce strength of Quick Worker.